--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     margin-bottom: 1.8rem;
 }
 
+#sector h4{
+    margin-top: 4rem;
+}
+
 @media only screen and (max-width: 600px) {
     h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         margin-top: 5.1rem;
@@ -4066,6 +4070,15 @@ footer .row {
         font-size: 3vmin;
         opacity: .75;
         text-align: center;
+    }
+
+    #sector ul{
+        padding-top: 7.7rem;
+    }
+    @media only screen and (max-width: 600px) {
+        #sector ul{
+            padding-top: 0;
+        }
     }
 
 
