--- a/css/styles.css
+++ b/css/styles.css
@@ -2765,7 +2765,7 @@ html.no-csstransitions .home-content__main {
  * ## services list
  * ------------------------------------------------------------------- */
 .services-list {
-    margin-top: 6rem;
+    margin-top: 11rem;
 }
 
 .services-list .service-item {
@@ -3749,7 +3749,7 @@ footer .row {
  * ## footer main
  * --------------------------------------------------------------- */
 .footer-main {
-    text-align: left;
+    text-align: center;
 }
 
 .footer-main .left {
@@ -3762,14 +3762,15 @@ footer .row {
 
 .footer-logo {
     display: block;
-    margin: -.6rem 0 3.6rem 0;
+    margin: -0.6rem auto 3.6rem auto;
     padding: 0;
     outline: 0;
     border: none;
-    width: 85px;
-    height: 28px;
+    width: 13rem;
+    height: 45px;
     background: url("../images/logo-white.png") no-repeat center;
-    background-size: 85px 28px;
+    background-size: auto;
+    background-size: 13rem 45px;
     font: 0/0 a;
     text-shadow: none;
     color: transparent;
@@ -4082,6 +4083,64 @@ footer .row {
     }
 
 
+    /* Social Icons */
+    .social-icons {
+        padding-left: 0;
+        margin-top: 2.2rem;
+        margin-bottom: 0;
+        list-style: none;
+      }
+      .social-icons li {
+        display: inline-block;
+        margin-bottom: 4px;
+      }
+      .social-icons li.title {
+        margin-right: 15px;
+        text-transform: uppercase;
+        color: #96a2b2;
+        font-weight: 700;
+        font-size: 13px;
+      }
+      .social-icons a {
+        background-color: #eceeef;
+        color: #3f3f3f;
+        font-size: 16px;
+        display: inline-block;
+        line-height: 44px;
+        width: 44px;
+        height: 44px;
+        text-align: center;
+        margin-right: 8px;
+        border-radius: 100%;
+        -webkit-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        transition: all 0.2s linear;
+      }
+      .social-icons a:active,
+      .social-icons a:focus,
+      .social-icons a:hover {
+        color: #fff;
+        background-color: #29aafe;
+      }
+      .social-icons.size-sm a {
+        line-height: 34px;
+        height: 34px;
+        width: 34px;
+        font-size: 14px;
+      }
+      .social-icons a.facebook:hover {
+        background-color: #3b5998;
+      }
+      .social-icons a.instagram:hover {
+        background-color: #ea2a84ef;
+      }
+      @media (max-width: 767px) {
+        .social-icons li.title {
+          display: block;
+          margin-right: 0;
+          font-weight: 600;
+        }
+      }
 
 
 /*# sourceMappingURL=styles.css.map */
