--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ html, body {
 }
 
 body {
-    background: #111111;
+    background: #ffffff;
     font-family: "ramabhabra", serif;
     font-size: 1.7rem;
     font-style: normal;
